# engram

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  HARNESS_LOG_INTEGRATION_FINDINGS.md  README.md  RELEASE_READINESS.md  package.json
.github/scripts/: write-homebrew-formula.mjs
.github/workflows/: release.yml
adapters/: ADAPTERS.md  CLAUDE_REVIEWERS.md  IMPLEMENTERS.md
adapters/reviews/: claude_review_output.md  claude_review_output_round2.md  claude_review_output_round3.md  claude_review_prompt.md  claude_review_prompt_round2.md  claude_review_prompt_round3.md
docs/: real-harness-validation.md  releasing.md
docs/experiments/: t114-forced-compaction-validation.md  t126-dispatch-adversarial-cycle.md
docs/ops/: multi-machine-setup.md
npm/scripts/: install.js
scratch/: adapter_review_codex_20260222_170817.md  claude_review_prompt.txt
scripts/: install-hooks-safe.sh  real-harness-validation.sh  t114_forced_compaction_validation.sh  watch-openclaw-sessions.sh
scripts/hooks/: post-merge  pre-commit  pre-push
specs/: design-revision-brief.md  discovery-cursor.md  engram.md  incremental-ingest.md
specs/adapters/: claude-code.md  codex-cli.md  cursor.md  gemini-cli.md  opencode.md
specs/core/: dispatch-marker.md  event-contract.md
src/: lib.rs  main.rs
tests/: claude_adapter_fixtures.rs  clawline_validation.rs  cli_e2e.rs  codex_adapter_fixtures.rs  current_behavior.rs  cursor_adapter_fixtures.rs  dispatch_marker_e2e.rs  ingest_e2e.rs  live_adapter_samples.rs  opencode_adapter_fixtures.rs  real_harness_validation.rs
(+37 files in other folders)
