[package]
name = "engram"
version = "0.2.1"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
zstd = "0.13"
chrono = { version = "0.4", default-features = true }
glob = "0.3"
walkdir = "2"
notify = "6"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
